src/objects/Internal_Comment__c.object
<CustomObject>
    <description>Internal notes or comments for CO</description>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Order Header Lookup</description>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Internal Comments</relationshipLabel>
        <relationshipName>Internal_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Field to store internal comment&apos;s text</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Non_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Non_Deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non Deletable</label>
        <type>Checkbox</type>
    </fields>
    <label>Internal Comment</label>
    <nameField>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Internal Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>